# shp2geojson

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  install.ps1  install.sh  shp2geojson-guidelines.md  shp2geojson-mockup.html
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml  release.yml
assets/: design-philosophy.md  rustdoc-custom.css  rustdoc-header.html
src/: checkpoint.rs  cli.rs  config.rs  convert.rs  discover.rs  error.rs  hooks.rs  interactive.rs  lib.rs  main.rs  output.rs  progress.rs  queue.rs  reproject.rs  worker.rs
