[package]
name = "shp2geojson"
version = "0.1.1"
edition = "2021"
rust-version = "1.88"
description = "High-performance ESRI Shapefile to GeoJSON converter."
license = "MIT"
repository = "https://github.com/s19835/shp2geojson"
homepage = "https://github.com/s19835/shp2geojson"
readme = "README.md"
keywords = ["shapefile", "geojson", "gis", "conversion", "geospatial"]
categories = ["command-line-utilities", "science::geo"]
exclude = [".github/", "CLAUDE.md", "shp2geojson-guidelines.md", "shp2geojson-mockup.html"]

[[bin]]
name = "shp2geojson"
path = "src/main.rs"

[lib]
name = "shp2geojson"
path = "src/lib.rs"

[features]
default = ["reproject"]
reproject = ["dep:proj"]

[dependencies]
anyhow               = "1.0"
clap                 = { version = "4.5", features = ["derive"] }
console              = "0.15"
clap_complete        = "4.5"
crossbeam-channel    = "0.5"
ctrlc                = "3.4"
geojson              = { version = "0.24", default-features = true }
indicatif            = "0.17"
num_cpus             = "1.17"
proj                 = { version = "0.27", optional = true }
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
shapefile            = "0.7"
thiserror            = "2.0"
toml                 = "0.8"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
walkdir              = "2.5"

[dev-dependencies]
tempfile = "3"
